# physfs-cpp

./: .gitignore  CMakeLists.txt  README.md
include/: physfs.hpp
src/: CMakeLists.txt  physfs.cpp
